Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70437

Scrollbars on QWebEngineViews do not react to releasing the mouse button outside of the application window

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.15.1
    • 5.11.1, 5.15.0 Beta4
    • WebEngine
    • None
    • Windows 10 (1803)
    • Windows
    • 6eadb2f2588b240b5fcda38e1f68a49a4690eb6b (qt/qtwebengine/dev) 4f6da986bf6aa929670e6bbf1630d51d886aa3d8 (qt/qtwebengine/5.15)

    Description

      The scroll bars in a QWebEngineView behave strangely when dragging the scroll handle and releasing the mouse button outside of the application window. The scrollbar looks and acts just as if the mouse button was still pressed. Clicking on the scrollbar seems to restore its state.

      The issue can be reproduced with the "WebEngine Quick Nano Browser" example. Start the program and grab the scrollbar handle on the vertical scrollbar, then move the mouse outside of the application window and let go of the mouse button. The scrollbar handle will still act as if the mouse button is pressed, even when the cursor reenters the application.

      Tested on Qt 5.11.1 (msvc2017_64)

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              pvarga Peter Varga
              sonoxious Simon Börjesson
              Votes:
              1 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes